staging-config/gateway-lb.yaml
apiVersion: v1
kind: Service
metadata:
  name: gateway-loadbalancer
  namespace: staging
spec:
  type: LoadBalancer
  selector:
    app: gateway
  ports:
  - port: 80
    targetPort: 3000
