staging-config/gateway.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gateway-depl
  namespace: staging
spec:
  replicas: 2
  selector:
    matchLabels:
      app: gateway
  template:
    metadata:
      labels:
        app: gateway
    spec:
      containers:
        - name: gateway
          readinessProbe:
            httpGet:
              path: /gateway/ping
              port: 3000
          ports:
          - name: gateway-port
            containerPort: 3000
          image: sijibomi242/eventer-gateway-pre-prod:latest #TODO: image pull secret to auth with docker
          imagePullPolicy: Always
---
apiVersion: v1
kind: Service 
metadata:
  name: gateway-srv
  namespace: staging
spec:
  selector:
    app: gateway
  ports:
    - name: gateway-srv-port
      protocol: TCP
      port: 3000
      targetPort: 3000
