staging-config/rabbits.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rabbits-depl
  namespace: staging
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rabbits
  template:
    metadata:
      labels:
        app: rabbits
    spec:
      containers:
        - name: rabbits
          image: rabbitmq:3-management-alpine
---
apiVersion: v1
kind: Service 
metadata:
  name: rabbits-srv
  namespace: staging
spec:
  selector:
    app: rabbits
  ports:
    - name: rabbit
      protocol: TCP
      port: 5672
      targetPort: 5672
