staging-config/users-db.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: users-db-depl
  namespace: staging
spec:
  replicas: 1
  selector:
    matchLabels:
      app: users-db
  template:
    metadata:
      labels:
        app: users-db
    spec:
      containers:
        - name: users-db
          image: postgres:13-alpine
---
apiVersion: v1
kind: Service 
metadata:
  name: users-db-srv
  namespace: staging
spec:
  selector:
    app: users-db
  ports:
    - name: db
      protocol: TCP
      port: 5432
      targetPort: 5432
