staging-config/users-redis.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: users-redis-depl
  namespace: staging
spec:
  replicas: 1
  selector:
    matchLabels:
      app: users-redis
  template:
    metadata:
      labels:
        app: users-redis
    spec:
      containers:
        - name: users-redis
          image: redis:6-alpine
---
apiVersion: v1
kind: Service 
metadata:
  name: users-redis-srv
  namespace: staging
spec:
  selector:
    app: users-redis
  ports:
    - name: redis
      protocol: TCP
      port: 6379
      targetPort: 6379
