staging-config/users.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: users-depl
  namespace: staging
spec:
  replicas: 1
  selector:
    matchLabels:
      app: users
  template:
    metadata:
      labels:
        app: users
    spec:
      containers:
        - name: users
          image: sijibomi242/eventer-users-pre-prod:latest #TODO: image pull secret to auth with docker
---

apiVersion: v1
kind: Service
metadata:
  name: users-srv
spec:
  selector:
    app: users
  ports:
    - name: users
      protocol: TCP
      port: 80
      targetPort: 4000
