staging-config/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gateway-ingress
  namespace: staging
  annotations:
    kubernetes.io/ingress.global-static-ip-name: "web-static-ip"
    kubernetes.io/ingress.class: "nginx"
spec:
  defaultBackend:
    service:
      name: gateway-srv
      port:
        number: 3000
